[project]
name = "arena-insight"
version = "0.1.0"
description = "A Multi-Agent Approach to Navigating Olympic Data with LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "cryptography>=47.0.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.9",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
    "trulens>=2.7.2",
    "trulens-providers-litellm>=2.7.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
